Pertemuan 2 Belajar Javascript

--- a/belajar_js.html
+++ b/belajar_js.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belajar Java Script</title>
-    <script>
-        
-    </script>
+
 </head>
 
 <body>
-
+    <h1 id="Judul">Selamat Belajar Java</h1>
+    <input type="text" id="inputNama" placeholder="Masukkan Nama Anda">
+    <button onclick="sapa()">Klik Saya! </button>
+    <br>
+    <br>
+    <button onclick="ubahWarna()">Ubah Warna</button>
+    <script src="hello.js"></script>
+    <script src="sapa.js"></script>
+    <script src="warna.js"></script>
 
 </body>
-
 </html>
