--- a/belajar_js.html
+++ b/belajar_js.html
@@ -15,9 +15,9 @@
     <br>
     <br>
     <button onclick="ubahWarna()">Ubah Warna</button>
-    <script src="hello.js"></script>
-    <script src="sapa.js"></script>
-    <script src="warna.js"></script>
+    <script src="js/hello.js"></script>
+    <script src="js/sapa.js"></script>
+    <script src="js/warna.js"></script>
 
 </body>
 </html>
