--- a/PERTEMUAN 2/portofolio_js.html
+++ b/PERTEMUAN 2/portofolio_js.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio Saya</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="js/sapa.js"></script>
     <script src="js/warna.js"></script>
     <script src="js/background.js"></script>
