--- a/Pertemuan 3/complit_portofolio.html
+++ b/Pertemuan 3/complit_portofolio.html
@@ -13,48 +13,79 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
         integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="background.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#"><b>Portofolio</b></a>
+        <a class="navbar-brand" href="#"><b>MyPortofolio</b></a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#greeting">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="#project">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container mt-5 ">
+        <p class="greeting" id="greeting">Hello!, Welcome To MyPortofolio</p>
+        <p class="Nama" id="Nama">I'M Hayyan</p>
+        <p><i>Front-End <u>Web Developer</u></i></p>
+        <p id="about">Universitas Islam Kalimantan Muhammad Arsya Al-Banjari Banjarbaru Kalimantan</p>
+        <button class="btn btn-danger" onclick="ubahBackground()">Ubah Warna Background</button>
+        <h3 class="project" id="project">Project</h3>
         <div class="row">
-            <div class="col-mt-4">
+            <div class="col-sm-4">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Profile</h5>
+                        <h5 class="card-title">Project 1</h5>
                         <p class="card-text">Deskripsi singkat tentang project 1.</p>
                         <a href="" class="btn btn-primary">Lihat Project 1</a>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-mt-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Profile</h5>
-                    <p class="card-text">Deskripsi singkat tentang project 1.</p>
-                    <a href="" class="btn btn-primary">Lihat Project 1</a>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 2</h5>
+                        <p class="card-text">Deskripsi singkat tentang project 2.</p>
+                        <a href="#" class="btn btn-primary">Lihat Project 2</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Project 3</h5>
+                        <p class="card-text">Deskripsi singkat tentang project 3.</p>
+                        <a href="#" class="btn btn-primary">Lihat Project 3</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="row mt-3" style="margin-left: 62px;">
+        <h5 class="card-title mt-5" id="contact">Contact Me</h5>
+        <div class="col-sm-5">
+            <div class="card">
+                <div class="card-body">
+                    <a href="">📧 hayyanfarris462@gmail.com</a><br>
+                    <a href="">📱 +62 812-3456-7891</a><br>
+                    <a href="">📍 Banjarbaru, Kalimantan Selatan</a>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
