TUGAS AKHIR PORTOFOLIO LENGKAP

--- a/complit_portofolio.html
+++ b/complit_portofolio.html
@@ -14,7 +14,7 @@
         integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <script src="background.js"></script>
+    <script src="/PERTEMUAN 3/background.js"></script>
 </head>
 
 <body>
